[gd_scene load_steps=9 format=3 uid="uid://bdjmcntuu1yoy"]

[ext_resource type="Script" path="res://UI1.gd" id="1"]
[ext_resource type="PackedScene" path="res://Back Ground.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://c880ppsw4aehw" path="res://DroidSerif-WmoY.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://cmqhctvmksflg" path="res://black-lock-icon-isolated-closed-260nw-1382663930.png" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Level_Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Level_1" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.052
anchor_top = 0.084
anchor_right = 0.058
anchor_bottom = 0.099
offset_left = 11.752
offset_top = 14.6
offset_right = 105.232
offset_bottom = 103.4
focus_mode = 1
theme_override_fonts/font = SubResource("1")
text = "Level 1"
expand_icon = true

[node name="Level_2" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.052
anchor_top = 0.084
anchor_right = 0.058
anchor_bottom = 0.099
offset_left = 176.752
offset_top = 14.6
offset_right = 270.232
offset_bottom = 103.4
focus_mode = 1
theme_override_fonts/font = SubResource("2")
text = "Level 2"
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="Level_2"]
position = Vector2(52.5, 52.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4")

[node name="Options" type="Button" parent="."]
layout_mode = 0
anchor_top = 0.992
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -60.2
offset_right = -11.0
offset_bottom = -5.0
theme_override_fonts/font = SubResource("3")
text = "Settings"

[node name="Other" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.992
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1512.0
offset_top = -137.36
offset_right = -7.0
offset_bottom = -82.0
theme_override_fonts/font = SubResource("4")
text = "Under Construction"

[node name="Back_Ground" parent="." instance=ExtResource("2")]
visible = false

[node name="Locks" type="Node2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Options2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.992
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -137.36
offset_right = -428.0
offset_bottom = -82.0
theme_override_fonts/font = SubResource("3")
text = "How To Play"

[connection signal="pressed" from="Level_1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="Level_2" to="." method="_on_Level2"]
[connection signal="pressed" from="Options" to="." method="_settings_pressed"]
[connection signal="pressed" from="Other" to="." method="_on_Other_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_easter_egg"]
[connection signal="pressed" from="Options2" to="." method="_on_options_2_pressed"]
